# codegen-cnn

./: .gitignore  Brewfile  CMakeLists.txt  HelloTest.cpp  Layer.h  README.md  build.py  linalg.h  main.cpp  requirements.txt  tensor.h
lab/: basic-net.ipynb
test/: CMakeLists.txt  HelloTest.cpp  TestLinAlg.cpp  TestTensor.cpp
